cabal-version: 2.4

name: zzz
version: 0

library
  build-depends:
    base ^>= 4.12,
    fused-effects ^>= 0.4,
    text ^>= 1.2,
    unordered-containers ^>= 0.2,
    z3 ^>= 408.0,

  default-extensions:
    DeriveAnyClass
    DeriveFunctor
    DerivingStrategies
    FlexibleContexts
    FlexibleInstances
    GADTSyntax
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    ScopedTypeVariables
    TypeOperators

  default-language:
    Haskell2010

  exposed-modules:
    Scrap
    Zzz

  ghc-options:
    -Wall
