cabal-version: 2.4

name: zzz
version: 0

library
  build-depends:
    base ^>= 4.12,
    fused-effects ^>= 0.4,
    hashable,
    text ^>= 1.2,
    unordered-containers ^>= 0.2,
    z3 ^>= 408.0,

  default-extensions:
    BlockArguments
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TypeOperators

  default-language:
    Haskell2010

  exposed-modules:
    Scrap
    Zzz

  ghc-options:
    -Wall

  other-modules:
    Framed
    Function
    Lit
    Sort
    Term
    Z3
    Z3C
