cabal-version: 2.4

name: z3-effect
version: 0

library
  build-depends:
    base ^>= 4.12,
    fused-effects ^>= 0.4,
    z3 == 408.0,

  default-extensions:
    DeriveAnyClass
    DeriveFunctor
    DerivingStrategies
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TypeOperators

  default-language:
    Haskell2010

  exposed-modules:
    Z3.Effect

  ghc-options:
    -Wall
