cabal-version: 2.4

name: zzz
version: 0

library
  build-depends:
    base ^>= 4.12,
    bytestring ^>= 0.10,
    fused-effects ^>= 0.4,
    hashable,
    sexp-grammar,
    text ^>= 1.2,
    unordered-containers ^>= 0.2,
    -- TODO remove z3 dependency
    z3 ^>= 408.0,
    z3-effect,

  default-extensions:
    BlockArguments
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    OverloadedStrings
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TypeOperators

  default-language:
    Haskell2010

  exposed-modules:
    -- Scrap
    Zzz

  ghc-options:
    -Wall

  other-modules:
    Framed
    Function
    Lit
    Sort
    Term
    Var
    Zzz.Carrier
    Zzz.Effect
